--- a/environments/dev/config.yml
+++ b/environments/dev/config.yml
@@ -10,3 +10,10 @@ alb:
       unhealthy_threshold: 2
       interval: 30
       timeout: 10
+ecs_capacity_providers:
+  fargate:
+    base: 0
+    weight: 0
+  fargate_spot:
+    base: 1
+    weight: 1
